<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="81dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/ic_logo"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/login"
                    android:textColor="@color/primary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/email"
                    android:textColor="#999999"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="7dp"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/ic_mail"
                    android:textColor="@color/black"
                    android:textColorHint="#676767"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/password"
                    android:textColor="#999999"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="7dp"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#676767"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="47dp"
                    android:background="@drawable/button_login"
                    android:enabled="true"
                    android:paddingVertical="16dp"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/dont_have_an_account"
                    android:textColor="#999999"
                    android:layout_gravity="center"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <include
                android:id="@+id/include_progress"
                layout="@layout/progress_layout"/>
        </FrameLayout>
    </ScrollView>
</layout>